# antibot-ai-ranker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: FINDINGS.md  ROADMAP.md
examples/: sample-benchmark-all.json  sample-benchmark-manual.json  sample-calibration-all.json  sample-calibration-family-alias-improved.json  sample-calibration-family-all.json  sample-calibration-family-manual.json  sample-calibration-family-numeric-improved.json  sample-calibration-manual.json  sample-eval.json  sample-gate-artifact-provider.json  sample-mine-disagreements.json  sample-shadow-provider.json  sample-shadow-report.json  sample-split-eval-real-heldout.json  sample-split-eval-synthetic-smoke.json  sample-summary.json  sample-validate-balanced-35.json  sample-validate-balanced-50.json  sample-validate-conservative.json  sample-validate-disagreement-gate.json  sample-validate-disagreement-multiseed.json  sample-validate-gate-all.json  sample-validate-gate-manual-heldout.json  sample-validate-multiseed-conservative.json  sample-validate-multiseed-override.json  sample-validate-override.json  sample-validate-safety-p10.json  sample-validate-safety-p25.json
tests/: test_alias_features.py  test_aliases.py  test_balanced_validation.py  test_benchmark.py  test_cli_benchmark.py  test_cli_calibrate.py  test_cli_calibrate_family.py  test_cli_fast_disagreement_multiseed.py  test_cli_gate_artifact.py  test_cli_mine_disagreements.py  test_cli_provider.py  test_cli_provider_artifact.py  test_cli_shadow_export.py  test_cli_split_eval.py  test_cli_synthetic.py  test_confidence.py  (+33 more)
(+31 files in other folders)
