[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "antibot-ai-ranker"
version = "0.1.0"
description = "Research baseline for learning Antibot option ordering from OCR/debug data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Indra Yuda" }]
keywords = ["antibot", "ranker", "ocr", "ml"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
antibot-ranker = "antibot_ai_ranker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/antibot_ai_ranker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
